<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Mobile Project</string>
    <string name="product_name">Product N:</string>
    <string name="name_hint">Name</string>
    <string name="product_description">Product desc:</string>
    <string name="description_hint">Description</string>
    <string name="product_picture">Product Pic:</string>
    <string name="date">Post the ad on :</string>
    <string name="links_hint">Links (use comma)</string>
    <string name="upload_product_photos">upload product photos</string>
    <string name="owner_name">Owner N:</string>
    <string name="full_name_hint">Full Name</string>
    <string name="owner_picture">Owner Pic:</string>
    <string name="wilaya">Wilaya:</string>
    <string name="wilaya_hint">Wilaya</string>
    <string name="link_hint">Link</string>
    <string name="owner_email">Owner E:</string>
    <string name="email_hint">Email</string>
    <string name="owner_phone_number">Owner Num:</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="announces">Announces</string>
    <string name="contacts">Contacts:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="call_the_owner">Call the owner</string>
    <string name="add_to_favoris">Add to favoris</string>
    <string name="email_the_owner">Email the owner</string>
    <string name="owner_profile_picture">Owner PP:</string>
    <string name="product_picture_image">Product picture</string>
    <string name="sort">sort</string>
    <string name="search">Search</string>

    <string-array name="spinner_sort">
        <item android:id="@+id/no_sort"></item>
        <item android:id="@+id/name_sort">Category</item>
        <item android:id="@+id/owner_sort">Owner</item>
        <item android:id="@+id/wilaya_sort">Localisation</item>
    </string-array>


    <!-- Login Activity Strings  -->
    <string name="google_login">Login avec google</string>
    <string name="facebook_login">Login avec facebook</string>
    <string name="main_view_car_description">App logo</string>

    <string name="facebook_app_id">529056181197762</string>
    <string name="fb_login_protocol_scheme">fb529056181197762</string>
    <string name="address">Address: </string>

</resources>
