<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddProductActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/product_name"
                    app:layout_constraintBottom_toTopOf="@+id/productDescription"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name_hint"
                    android:ems="10"
                    app:layout_constraintTop_toTopOf="@id/product_name"
                    app:layout_constraintBottom_toBottomOf="@id/product_name"
                    app:layout_constraintStart_toEndOf="@id/product_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/productNameEditText"/>

            <TextView
                    android:text="@string/product_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_name"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/productDescription"
                    app:layout_constraintBottom_toTopOf="@+id/productPicLink"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/description_hint"
                    android:ems="10"
                    app:layout_constraintTop_toTopOf="@id/productDescription"
                    app:layout_constraintBottom_toBottomOf="@id/productDescription"
                    app:layout_constraintStart_toEndOf="@id/productDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/productDescEditText"/>

            <TextView
                    android:text="@string/product_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productDescription"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/productPicLink"
                    app:layout_constraintBottom_toTopOf="@+id/wilaya"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/links_hint"
                    android:ems="10"
                    app:layout_constraintTop_toTopOf="@id/productPicLink"
                    app:layout_constraintBottom_toBottomOf="@id/productPicLink"
                    app:layout_constraintStart_toEndOf="@id/productPicLink"
                    app:layout_constraintEnd_toStartOf="@id/productPicLinkImageButton"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/productPicLinkEditText"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/productPicLinkEditText"
                    app:layout_constraintTop_toTopOf="@id/productPicLinkEditText"
                    app:layout_constraintBottom_toBottomOf="@id/productPicLinkEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_upload"
                    android:id="@+id/productPicLinkImageButton"
                    android:contentDescription="@string/upload_product_photos"/>

            <TextView
                    android:text="@string/wilaya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productPicLink"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/wilaya"
                    app:layout_constraintBottom_toTopOf="@+id/ownerName"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/wilaya_hint"
                    android:ems="10"
                    app:layout_constraintTop_toTopOf="@id/wilaya"
                    app:layout_constraintBottom_toBottomOf="@id/wilaya"
                    app:layout_constraintStart_toEndOf="@id/wilaya"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/WilayaText"
            />

            <TextView
                    android:text="@string/owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wilaya"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/ownerName"
                    app:layout_constraintBottom_toTopOf="@+id/ownerPicLink"/>


            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/full_name_hint"
                    android:ems="10"
                    app:layout_constraintTop_toTopOf="@id/ownerName"
                    app:layout_constraintBottom_toBottomOf="@id/ownerName"
                    app:layout_constraintStart_toEndOf="@id/ownerName"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/ownerNameEditText"/>

            <TextView
                    android:text="@string/owner_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ownerName"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/ownerPicLink"
                    app:layout_constraintBottom_toTopOf="@+id/ownerEmail"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/link_hint"
                    android:ems="10"
                    app:layout_constraintTop_toTopOf="@id/ownerPicLink"
                    app:layout_constraintBottom_toBottomOf="@id/ownerPicLink"
                    app:layout_constraintStart_toEndOf="@id/ownerPicLink"
                    app:layout_constraintEnd_toStartOf="@id/ownerPicLinkImageButton"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/ownerPicLinkEditText"/>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/ownerPicLinkEditText"
                    app:layout_constraintTop_toTopOf="@id/ownerPicLinkEditText"
                    app:layout_constraintBottom_toBottomOf="@id/ownerPicLinkEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_upload"
                    android:background="@color/colorPrimary"
                    android:id="@+id/ownerPicLinkImageButton"
                    android:contentDescription="@string/upload_product_photos"/>
            <TextView
                    android:text="@string/owner_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ownerPicLink"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/ownerEmail"
                    app:layout_constraintBottom_toTopOf="@+id/ownerPhone"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:ems="10"
                    app:layout_constraintTop_toTopOf="@id/ownerEmail"
                    app:layout_constraintBottom_toBottomOf="@id/ownerEmail"
                    app:layout_constraintStart_toEndOf="@id/ownerEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/ownerEmailEditText"/>

            <TextView
                    android:text="@string/owner_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ownerEmail"
                    app:layout_constraintBottom_toTopOf="@id/confirmButton"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/ownerPhone"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone_number_hint"
                    android:ems="10"
                    app:layout_constraintTop_toTopOf="@id/ownerPhone"
                    app:layout_constraintBottom_toBottomOf="@id/ownerPhone"
                    app:layout_constraintStart_toEndOf="@id/ownerPhone"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/ownerPhoneEditText"/>
            <Button
                    android:text="@string/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ownerPhone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/confirmButton"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>