<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ProductActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:auto_cycle="false"
                    android:overScrollMode="never"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
            </com.denzcoskun.imageslider.ImageSlider>

            <TextView
                    tools:text="Product A"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_slider"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/textView5"/>


            <TextView
                    tools:text="Category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView5"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/category"/>

            <TextView
                    tools:text="Price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/price"/>

            <TextView
                    tools:text="Surface"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/price"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/surface"/>

            <TextView
                    tools:text="Description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/surface"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/textView6"/>
            <TextView
                    android:text="@string/wilaya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView6"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/wilayaDes"/>

            <TextView
                    tools:text="Alger"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/wilayaDes"
                    app:layout_constraintBottom_toBottomOf="@id/wilayaDes"
                    app:layout_constraintStart_toEndOf="@id/wilayaDes"
                    app:layout_constraintEnd_toStartOf="@id/PositionImageButtton"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/ProductwilayaName"/>

            <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="@id/wilayaDes"
                    app:layout_constraintBottom_toBottomOf="@id/wilayaDes"
                    app:layout_constraintStart_toEndOf="@id/ProductwilayaName"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/PositionImageButtton"
                    android:contentDescription="@string/call_the_owner"
                    app:srcCompat="@android:drawable/ic_menu_compass"/>

            <androidx.constraintlayout.widget.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/barrier"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="PositionImageButtton,ProductwilayaName, wilayaDes"/>


            <TextView
                    tools:text="Jhon Doe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:id="@+id/textView7"/>

            <androidx.constraintlayout.widget.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/barrier2"
                    app:barrierDirection="bottom"
                    tools:layout_editor_absoluteY="731dp"
                    app:constraint_referenced_ids="textView7"/>
            <TextView
                    android:text="@string/contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier2"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/textView4"/>

            <TextView
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView4"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/email"/>

            <TextView
                    tools:text="fa_gattal@esi.dz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/textView4"
                    app:layout_constraintTop_toTopOf="@id/email"
                    app:layout_constraintBottom_toBottomOf="@id/email"
                    app:layout_constraintStart_toEndOf="@id/email"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toStartOf="@id/sendEmailImageButton"
                    android:id="@+id/emailCorps"/>


            <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="@id/emailCorps"
                    app:layout_constraintBottom_toBottomOf="@id/emailCorps"
                    app:layout_constraintStart_toEndOf="@id/emailCorps"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_send"
                    android:id="@+id/sendEmailImageButton"
                    android:contentDescription="@string/email_the_owner"/>
            <TextView
                    android:text="@string/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/phone"/>

            <TextView
                    tools:text="+213698938280"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/phone"
                    app:layout_constraintBottom_toBottomOf="@id/phone"
                    app:layout_constraintStart_toEndOf="@id/phone"
                    app:layout_constraintEnd_toStartOf="@id/callOwnerImageButtton"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/PhoneNumber"/>


            <TextView
                    android:text="@string/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/address"/>

            <TextView
                    tools:text="Alger"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/address"
                    app:layout_constraintBottom_toBottomOf="@id/address"
                    app:layout_constraintStart_toEndOf="@id/address"
                    app:layout_constraintEnd_toStartOf="@id/adress_button"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/owner_adress"/>

            <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="@id/textView5"
                    app:layout_constraintBottom_toBottomOf="@id/textView5"
                    app:layout_constraintStart_toEndOf="@id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/favoris_button"
                    android:contentDescription="@string/add_to_favoris"
                    app:srcCompat="@drawable/ic_star_black_24dp"/>
            <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="@id/address"
                    app:layout_constraintBottom_toBottomOf="@id/address"
                    app:layout_constraintStart_toEndOf="@id/owner_adress"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/adress_button"
                    android:contentDescription="@string/call_the_owner"
                    app:srcCompat="@android:drawable/ic_menu_compass"/>

            <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_telephone"
                    app:layout_constraintTop_toTopOf="@id/PhoneNumber"
                    app:layout_constraintBottom_toBottomOf="@id/PhoneNumber"
                    app:layout_constraintStart_toEndOf="@id/PhoneNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/callOwnerImageButtton"
                    android:contentDescription="@string/call_the_owner"/>


            <androidx.constraintlayout.widget.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/barrier3"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="callOwnerImageButtton, owner_adress, address"/>

            <VideoView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/space_16"
                    android:layout_marginStart="@dimen/space_16"
                    android:layout_marginEnd="@dimen/space_16"
                    android:layout_marginBottom="@dimen/space_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/videoView"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>